@@ -5,6 +5,8 @@ documents those changes that are of interest to users and administrators.
 ==============================
  -- Add port info to 'sinfo' and 'scontrol show node'.
  -- Fix errant definition of USE_64BIT_BITSTR which can lead to core dumps.
+ -- Move BatchScript to end of each job's information when using
+    "scontrol -dd show job" to make it more readable.
 
 * Changes in Slurm 17.02.0pre4
 ==============================
